# ConvoSphere

./: .dockerignore  .env.backup7  .gitignore  .pre-commit-config.yaml  =1.24.0  =7.4.0  AI_INTEGRATION_STATUS.md  AI_SERVICE_CLEANUP_SUMMARY.md  AI_SERVICE_FINAL_CLEANUP.md  AI_SERVICE_TEST_CLEANUP_SUMMARY.md  ANALYSIS_SUMMARY.md  AUDIT_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLI_IMPLEMENTATION_SUMMARY.md  CODE_CLEANUP_SUMMARY.md  CODE_QUALITY_ANALYSIS_REPORT.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  CONSOLIDATED_PROJECT_STATUS.md  CORRECTED_ANALYSIS.md  CURRENT_STATUS_UPDATE.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_ANALYSIS.md  DOCUMENTATION_BILINGUAL_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_SIMPLIFICATION_SUMMARY.md  DataExtract_Implementation_Roadmap.md  DataExtract_Integration_Plan.md  DataExtract_Integration_Summary.md  FINAL_COMPLETION_SUMMARY.md  FINAL_STATUS_REPORT.md  FRONTEND_IMPLEMENTATION_PLAN.md  FUNCTIONALITY_VERIFICATION.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_SUMMARY.md  KNOWLEDGE_BASE_IMPROVEMENTS_SUMMARY.md  LOGO_SUMMARY.md  Makefile  (+104 more)
.github/: README.md
.github/workflows/: README.md  ci-cd.yml  code-quality.yml  docs.yml  lint-only.yml  performance-tests.yml  test-pipeline.yml
app/core/: security.py
app/services/: assistant_service.py  tool_service.py  user_service.py
app/tools/: mcp_tool.py
archive/reports_20250809/: ARCHIVE_INDEX.md  CODE_QUALITY_ANALYSIS.md  DOCUMENTATION_CLEANUP_COMPLETE.md  PHASE_2_ANALYSIS.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_5_TASKS_COMPLETION_SUMMARY.md  REFACTORING_PLAN.md  REFACTORING_STATUS_SUMMARY.md
backend/: .env.backup  .env.example  .env.test  =6.0.0  Benutzerverwaltung_Implementierung.md  CLI_README.md  Dockerfile  admin.py  alembic.ini  appconftest.py  cli.py  coverage.json  main.py  pytest.ini  requirements-basic.txt  requirements-cli.txt  requirements-minimal.txt  requirements-test.txt  requirements.txt  test.db  test.db-journal  test.md  test.txt  test_assistants_api.py  test_conversations_api.py  test_tools_api.py  test_users_api.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/cli/: main.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_database.py  test_endpoints.py  test_endpoints_comprehensive.py  test_health.py  test_integration.py  test_knowledge_api.py  test_knowledge_models.py  test_knowledge_services.py  test_models.py  test_performance.py  test_performance_services.py  test_rag_service.py  test_redis.py  test_redis_integration.py  test_saml.py  test_schemas_v2.py  test_security.py  test_services.py  test_services_comprehensive.py  test_sso.py  test_utils.py  test_weaviate.py
backend/tests_old/: conftest.py
config/: cli.yaml
docker/backend/: Dockerfile  Dockerfile.secure
docker/frontend/: Dockerfile
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/redis/: redis.conf
docs/: .nojekyll  BULK_OPERATIONS.md  DOCUMENTATION_UPDATE_SUMMARY.md  I18N_IMPLEMENTATION_RESULTS.md  I18N_IMPROVEMENT_PLAN.md  KNOWLEDGE_BASE_SETTINGS.md  RAG_FEATURES.md  README.md  SSO_SETUP.md  STORAGE_INTEGRATION.md  WEITERENTWICKLUNG_UMGESETZT.md  agent-implementation.md  ai-service-architecture.md  api.md  architecture.md  assistants-vs-agents.md  automation-testing-overview.md  changelog.md  developer-guide.md  documentation-updates.md  faq.md  github-pages-setup.md  i18n.md  implementation-plan.md  implementation-status.md  index.md  mcp_integration.md  mkdocs.yml  pages-overview.md  project-overview.md  project-status.md  quick-start.md  requirements-docs.txt  security.md  sso-setup.md  test-coverage-achievements.md  testing-strategy.md  testing.md  user-guide.md  user-manual.md
docs/analysis/: README.md  TECHNICAL_ANALYSIS_SUMMARY.md  language_detection_fix.md  logging_opentelemetry_analysis.md  sqlite_vs_postgresql_analysis.md  translation_analysis_report.md  translation_improvements_summary.md
docs/api/: assistants.md  authentication.md  chat.md  conversations.md  errors.md  knowledge.md  mcp.md  overview.md  password_reset_api.md  tools.md  users.md  websocket.md
docs/architecture/: backend.md  database.md  frontend.md  overview.md  security.md  system-design.md
docs/archive/: CLI_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_SIMPLIFICATION_PLAN.md  README.md  deployment.md  developer-guide.md  faq.md  user-guide.md
docs/configuration/: frontend-backend-communication.md
docs/de/: developer-guide.md  faq.md  index.md  user-guide.md
docs/deployment/: automation.md  ci-cd.md  docker.md  monitoring.md  production.md
docs/developer/: password_reset_integration.md
docs/development/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE5_EXTENDED_EXPORT_SUMMARY.md  (+10 more)
frontend/: __init__.py  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.ts  test_integration.py
frontend-react/: .eslintrc.js  .gitignore  DESIGN_SYSTEM.md  EXTENDED_EXPORT_FEATURES.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  REFACTORING_SUMMARY.md  babel.config.js  cypress.config.ts  eslint.config.js  index.html  jest.config.js  jest.env.js  jest.setup.js  package-lock.json  package.json  postcss.config.cjs  tsconfig.app.json  vite.config.ts
scripts/: README.md  analyze_test_coverage.py  convosphere.py  deploy_secure.sh  fix_imports.py  fix_service_imports.py  migrate_test_imports.py  refactor_services.sh  refactor_tests.sh  run_tests.sh  security_scan.sh  service_refactoring_summary.md  start_improvement.py  start_mcp_server.py  test-communication.sh  test_api_integration.py  test_auth_fix.py  test_frontend_fix.py  update_dependencies.sh  validate_i18n.py  validate_translations.py
site/: 404.html  CNAME  index.html  sitemap.xml
src/: App.test.tsx  App.tsx  package.json
tests/: README.md  conftest.py  mock_magic.py  pytest.ini  simple_test_runner.py  test_runner.py
(+971 files in other folders)
